<resources>
    <string name="app_name">MobileRehab</string>
    <string name="title_activity_maps">title_activity_maps</string>
    <string name="update_profile">User Profile</string>
    <string name="add_user">Add Patient</string>
    <string name="add_appointment">Create Appointment</string>
    <string name="view_appointment">View Appointment</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">SAVE</string>
    <string name="days_away_from_drugs">Days Away From Drugs</string>
    <string name="identification_number">Identification Number</string>
    <string name="take_barcode_picture">Take Picture</string>
    <string name="scan_barcode">Scan QR Code</string>
    <string name="view_profile">View Profile</string>
    <string name="view_location">View Location</string>
    <string name="scan_qr">Scan Attendance</string>
    <string name="view_user">View Patient</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="appointment">APPOINTMENT</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="police">Police</string>
    <string name="hospital">Hospital</string>
    <string name="start_scan">start scan</string>
    <string name="update_save">UPDATE / SAVE</string>
    <string name="nearby_hospital">Nearby Hospital</string>
    <string name="list_of_appointment">List of Appointment</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="create_new_appointment">Create New Appointment</string>
    <string name="patient_details">Patient Details</string>
    <string name="list_of_patient">List of Patient</string>
    <string name="update_appointment">Update Appointment</string>
    <string name="delete_appointment">Delete Appointment</string>
</resources>
