<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".PatientProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView_updateprofile"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/update_profile"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/editText_patientname"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:layout_below="@+id/textView_updateprofile"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/full_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editText_patienticnumber"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:layout_below="@id/editText_patientname"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/identification_number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editText_patientaddress"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:layout_below="@+id/editText_patienticnumber"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/address"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editText_patientphonenumber"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:layout_below="@+id/editText_patientaddress"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/phone_number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editText_patientemail"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_below="@+id/editText_patientphonenumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/email_address"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editText_patientstartdate"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:layout_below="@id/editText_patientemail"
            android:hint="@string/days_away_from_drugs"
            android:clickable="true"
            android:inputType="date"
            android:datePickerMode="calendar"
            android:focusable="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/button_patientsave"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:layout_below="@id/editText_patientstartdate"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/update_save" />
    </RelativeLayout>

</ScrollView>