<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".AddPatient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_addpatient"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/add_user"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText_patientemail"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textView_addpatient"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />


        <EditText
            android:id="@+id/editText_patientpassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editText_patientemail"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editText_patientconfirmpassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editText_patientpassword"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editText_patientconfirmpassword"
            android:background="@drawable/roundedcorner"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/save" />

    </RelativeLayout>
</ScrollView>