<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".DoctorHome">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_transparent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="150dp"
        android:columnCount="3"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:rowCount="3">

        <Button
            android:id="@+id/button_addpatient"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:background="@drawable/roundedcorner"
            android:layout_column="0"
            android:gravity="center"
            android:adjustViewBounds="true"
            android:drawableTop="@drawable/ic_person_add"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:scaleType="centerInside"
            android:text="@string/add_user" />

        <Button
            android:id="@+id/button_addappointment"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/roundedcorner"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:adjustViewBounds="true"
            android:drawableTop="@drawable/ic_alarm_add"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:scaleType="centerInside"
            android:text="@string/add_appointment" />

        <Button
            android:id="@+id/button_viewappointment"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:adjustViewBounds="true"
            android:drawableTop="@drawable/ic_calendar_today"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:scaleType="centerInside"
            android:text="@string/view_appointment" />

        <Button
            android:id="@+id/button_viewpatient"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/roundedcorner"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:adjustViewBounds="true"
            android:drawableTop="@drawable/ic_person"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:scaleType="centerInside"
            android:text="@string/view_user" />

    </GridLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="670dp"
        android:background="@drawable/roundedcorner"
        android:gravity="center"
        android:text="@string/logout"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAlignment="center" />

</RelativeLayout>