<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_gravity="top|center"
    android:background="@drawable/gradient"
    android:scrollbars="none"
    app:barrierAllowsGoneWidgets="false"
    tools:context=".PatientHome">

    <TextView
        android:id="@+id/textView_startdate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView_datecounter"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_startdate"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView_userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView_randomquotes"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:gravity="center" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        app:alignmentMode="alignBounds"
        app:useDefaultMargins="true">

        <Button
            android:id="@+id/button_patientviewprofile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/roundedcorner"
            android:gravity="center"
            android:text="@string/view_profile"
            android:textAlignment="center"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_patientviewappointment"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/roundedcorner"
            android:gravity="center"
            android:text="@string/view_appointment"
            android:textAlignment="center"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_patientviewlocation"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:gravity="center"
            android:text="@string/view_location"
            android:textAlignment="center"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_patientscanqr"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/roundedcorner"
            android:gravity="center"
            android:text="@string/scan_qr"
            android:textAlignment="center"
            app:layout_column="1"
            app:layout_row="1" />

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:background="@drawable/roundedcorner"
        android:gravity="center"
        android:text="@string/logout"
        android:textAlignment="center" />
</RelativeLayout>