<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBGRecyclerView"
    tools:context=".AppointmentDetails">

    <TextView
        android:id="@+id/textView_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/appointment_details"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView_appointmentid"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView_patientname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView_ad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedcorner"
        android:backgroundTint="@color/colorRecyclerView"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_appointmentdate"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView_appointmentstatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedcorner"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/appointment_date"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/editText_appointmenttime"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/editText_appointmentdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedcorner"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/appointment_time"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <TextView
        android:id="@+id/textView_appointmentstatus"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView_patientname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedcorner"
        android:backgroundTint="@color/colorRecyclerView"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_updateappointment"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/editText_appointmenttime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedcorner"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/update_appointment" />

    <Button
        android:id="@+id/button_deleteappointment"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/button_updateappointment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedcorner"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/delete_appointment" />

</RelativeLayout>