<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".AddAppointment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_createappointment"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/create_new_appointment"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/spinner_patientname"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_below="@id/textView_createappointment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedcorner"
            android:fontFamily="sans-serif-condensed-medium" />

        <EditText
            android:id="@+id/editText_patientid"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@id/spinner_patientname"
            android:background="@drawable/roundedcorner"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editText_patientname"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@id/editText_patientid"
            android:background="@drawable/roundedcorner"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editText_appointmentdate"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editText_patientname"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/appointment_date"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editText_appointmenttime"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editText_appointmentdate"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/appointment_time"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/button_addappointment"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/editText_appointmenttime"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/save" />

        <TextView
            android:id="@+id/textView_userid"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/button_addappointment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>